--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -7,13 +7,13 @@ $space-width: 15px;
 $common-width: 200px;
 
 // 颜色
-$color-gray: #65676b;
+$color-gray: #7d7f82;
 $color-blue: #0095ff;
 $color-green: #15bf81;
 $color-yellow: #f7ab42;
 $color-red: #ff6666;
-$font-color: $color-gray - #555555;
-$border-color: $color-gray + #333333;
+$font-color: $color-gray - #333333;
+$border-color: $color-gray + #555555;
 
 // 其他
 $common-animate-time: 0.3s;
@@ -29,13 +29,15 @@ $label-line-height: $line-height;
 $input-font-color: $font-color;
 $input-disabled-color: $font-color + #777777;
 $input-width: $common-width;
+$input-animate-time: $common-animate-time;
 $input-font-size: $font-size;
 $input-space-width: $space-width;
 $input-line-height: $line-height;
-$input-border-color: $border-color;
-$input-border-error-color: $color-red;
-$input-border-active-color: $color-blue;
-$input-border-success-color: $color-green;
+$input-default-color: $color-gray;
+$input-error-color: $color-red;
+$input-warning-color: $color-yellow;
+$input-info-color: $color-blue;
+$input-success-color: $color-green;
 
 $textarea-height: 100px;
 $textarea-width: 300px;
