--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -12,8 +12,18 @@
   & + & {
     margin-left: $radio-space-width;
   }
-
-  .xin-input-icon {
+  &.disabled {
+    .xin-select-input {
+      cursor: not-allowed;
+      color: transparentize($input-default-color, 0.7);
+      border: 1px solid transparentize($input-default-color, 0.7);
+    }
+    .xin-select-icon {
+      cursor: not-allowed;
+      color: transparentize($input-default-color, 0.7);
+    }
+  }
+  .xin-select-icon {
     width: $input-line-height;
     height: 100%;
     position: absolute;
@@ -52,6 +62,12 @@
     .xin-tag {
       vertical-align: top;
     }
+    &.has-left-icon {
+      padding-left: $input-line-height;
+    }
+    &.has-right-icon {
+      padding-right: $input-line-height;
+    }
     &.focus {
       box-shadow: 0 0 8px transparentize($select-default-color, 0.6);
       background: transparentize($select-default-color, 0.9);
@@ -69,7 +85,7 @@
     &.has-right-icon {
       padding-right: $input-line-height;
     }
-    &.xin-input-round {
+    &.xin-select-round {
       border-radius: $input-line-height / 2;
     }
   }
