--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -125,7 +125,8 @@ $datePicker-animate-time: 0.3s;
 $datePicker-icon-height: 20px;
 $datePicker-icon-color: $color-gray + #444444;
 $datePicker-color: $color-gray - #222222;
-$datePicker-default-color: $color-blue;
+$datePicker-default-color: $color-gray;
+$datePicker-info-color: $color-blue;
 $datePicker-success-color: $color-green;
 $datePicker-error-color: $color-red;
 $datePicker-warning-color: $color-yellow;
