--- a/src/styles/components/datePicker.scss
+++ b/src/styles/components/datePicker.scss
@@ -1,1 +1,144 @@
-// @import "~element-ui/packages/theme-chalk/src/date-picker";
+
+@import "~@/styles/const.scss";
+@import "~@/styles/components/input.scss";
+
+.xin-date-picker {
+  display: inline-block;
+  width: $select-width;
+  transition: all 0.3s;
+  vertical-align: middle;
+  position: relative;
+  font-size: 0;
+  & + & {
+    margin-left: $radio-space-width;
+  }
+
+  .xin-date-picker-icon {
+    width: $input-line-height;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    color: $input-default-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &.icon-left {
+      left: 0;
+    }
+    &.icon-right {
+      right: 0;
+      .icon:hover {
+        color: $input-default-color - #333333;
+      }
+    }
+    .icon {
+      width: 16px;
+      height: 16px;
+      display: block;
+      &.rotate {
+        transform: rotate(180deg);
+      }
+    }
+  }
+
+  .xin-date-picker-input {
+    width: 100%;
+    font-size: $input-font-size;
+    line-height: $input-line-height - 6px;
+    box-sizing: border-box;
+    padding: 2px $input-space-width;
+    border: 1px solid $select-default-color;
+    background: transparentize($select-default-color, 0.95);
+    &.has-left-icon {
+      padding-left: $input-line-height;
+    }
+    &.has-right-icon {
+      padding-right: $input-line-height;
+    }
+    &.focus {
+      box-shadow: 0 0 8px transparentize($select-default-color, 0.6);
+      background: transparentize($select-default-color, 0.9);
+    }
+    &.placeholder {
+      color: transparentize($select-default-color, 0.6);
+    }
+    &.multiple {
+      padding-left: $input-space-width - 5px;
+      padding-right: $input-space-width - 5px;
+    }
+    &.has-left-icon {
+      padding-left: $input-line-height;
+    }
+    &.has-right-icon {
+      padding-right: $input-line-height;
+    }
+    &.xin-date-picker-round {
+      border-radius: $input-line-height / 2;
+    }
+  }
+  .xin-date-picker-cover {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+  }
+  .xin-date-picker-tags {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    min-height: $select-line-height;
+    font-size: $input-font-size;
+    line-height: $input-line-height - 10px;
+    box-sizing: border-box;
+    padding: 2px $input-space-width;
+    box-sizing: border-box;
+    transition: all $select-animate-time;
+    border: 1px solid $select-default-color;
+  }
+  .xin-date-picker-options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    padding-top: 5px;
+    min-width: 100%;
+    z-index: 2000;
+    .date-picker-content {
+      width: $datePicker-width;
+      background: #fff;
+      box-shadow: 0 0 8px transparentize($select-default-color, 0.6);
+      .content-header {
+        height: 30px;
+        position: relative;
+        border-bottom: 1px solid #eee;
+        padding: 5px 0;
+        .icon-left {
+          left: 10px;
+          .icon:hover {
+            color: $input-default-color - #333333;
+          }
+        }
+        .icon-right {
+          right: 10px;
+        }
+        .icon {
+          cursor: pointer;
+        }
+        .content-header-text {
+          text-align: center;
+          width: 100%;
+          font-size: $datePicker-font-size;
+          line-height: $datePicker-line-height;
+          color: #000;
+        }
+      }
+      .content-body {
+        height: 200px;
+      }
+    }
+  }
+}
+
