--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -131,6 +131,19 @@ $datePicker-success-color: $color-green;
 $datePicker-error-color: $color-red;
 $datePicker-warning-color: $color-yellow;
 
+// select
+$tagInput-width: 300px;
+$tagInput-font-size: $font-size;
+$tagInput-animate-time: 0.1s;
+$tagInput-icon-width: 15px;
+$tagInput-line-height: $line-height;
+$tagInput-space-width: $space-width;
+$tagInput-default-color: $color-gray;
+$tagInput-info-color: $color-blue;
+$tagInput-warning-color: $color-yellow;
+$tagInput-success-color: $color-green;
+$tagInput-error-color: $color-red;
+
 // table
 $table-font-size: $font-size;
 $table-line-height: $line-height;
