--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@
 @import "~@/styles/components/switch.scss";
 @import "~@/styles/components/rate.scss";
 @import "~@/styles/components/datePicker.scss";
+@import "~@/styles/components/tagInput.scss";
 @import "~@/styles/components/table.scss";
 @import "~@/styles/components/page.scss";
 @import "~@/styles/components/tabs.scss";
