--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -290,3 +290,14 @@ $popover-info-color: $color-blue;
 $popover-success-color: $color-green;
 $popover-warning-color: $color-yellow;
 $popover-error-color: $color-red;
+
+// tree
+$tree-space-width: $space-width;
+$tree-animate-time: 0.3s;
+$tree-font-size: $font-size;
+$tree-line-height: $line-height;
+$tree-default-color: $color-gray;
+$tree-info-color: $color-blue;
+$tree-success-color: $color-green;
+$tree-warning-color: $color-yellow;
+$tree-error-color: $color-red;
