--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,3 +31,4 @@
 @import "~@/styles/components/grid.scss";
 @import "~@/styles/components/popover.scss";
 @import "~@/styles/components/icon.scss";
+@import "~@/styles/components/tree.scss";
