--- a/src/styles/components/colorPicker.scss
+++ b/src/styles/components/colorPicker.scss
@@ -82,6 +82,11 @@
             width: 0;
             height: 0;
             position: relative;
+            &.down {
+              &::after {
+                content: " ";
+              }
+            }
             &::before {
               width: 8px;
               height: 8px;
@@ -100,17 +105,23 @@
               width: 50px;
               height: 50px;
               position: absolute;
-              top: 0;
-              left: 0;
+              top: -50%;
+              left: -50%;
               border-radius: 100%;
               border-width: 25px;
               border-style: solid;
               border-color: red;
-              content: " ";
               display: block;
               transform: translate3d(-50%, -50%, 0);
             }
           }
+        }
+        .pickers-cover {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          left: 0;
+          top: 0;
         }
       }
       .content-line {
