--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,3 +33,4 @@
 @import "~@/styles/components/popover.scss";
 @import "~@/styles/components/icon.scss";
 @import "~@/styles/components/tree.scss";
+@import "~@/styles/components/slide.scss";
