--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -317,3 +317,16 @@ $tree-info-color: $color-blue;
 $tree-success-color: $color-green;
 $tree-warning-color: $color-yellow;
 $tree-error-color: $color-red;
+
+// slide
+$slide-space-width: $space-width;
+$slide-animate-time: 0.1s;
+$slide-font-size: $font-size;
+$slide-line-height: $line-height;
+$slide-height: 8px;
+$slide-bar-width: 20px;
+$slide-default-color: $color-gray;
+$slide-info-color: $color-blue;
+$slide-success-color: $color-green;
+$slide-warning-color: $color-yellow;
+$slide-error-color: $color-red;
