--- a/src/styles/components/slide.scss
+++ b/src/styles/components/slide.scss
@@ -16,9 +16,9 @@
       position: relative;
       .slide-dot {
         position: absolute;
-        top: 0;
+        top: 15%;
         width: 2px;
-        height: 100%;
+        height: 70%;
         background: #fff;
       }
     }
@@ -41,6 +41,19 @@
       top: 0;
       height: 100%;
       background: $slide-info-color;
+    }
+  }
+  &.disabled {
+    .slide-content {
+      background: transparentize(($slide-default-color + #333333), 0.8);
+      .content-handle {
+        cursor: not-allowed;
+        background: $slide-default-color + #333333;
+      }
+      .content-selected {
+        opacity: 0.6;
+        background: $slide-default-color + #333333;
+      }
     }
   }
 }
